--- a/portfolio.html
+++ b/portfolio.html
@@ -49,25 +49,25 @@ footer {top: 920px;}
  
 <div id="portfolioLeft">
 <div class="mainImages"> 
-<img src="assets/images/portfolioOne.jpg">
+<img src="images/portfolioOne.jpg">
 <p>Hangman</p>
 </div>
 <div class="mainImages"> 
-<img src="assets/images/portfolioThree.jpg">
+<img src="images/portfolioThree.jpg">
 <p>Trivia Game</p>
 </div>
 <div class="mainImages"> 
-<img src="assets/images/portfolioFive.jpg">
+<img src="images/portfolioFive.jpg">
 <p>Rock Paper Scissors</p>
 </div>
 </div>
 <div id="portfolioRight">
 <div class="mainImages"> 
-<img src="assets/images/portfolioTwo.jpg">
+<img src="images/portfolioTwo.jpg">
 <p>RPG Game</p>
 </div>
 <div class="mainImages"> 
-<img src="assets/images/portfolioFive.jpg">
+<img src="images/portfolioFive.jpg">
 <p>Rutgers Info Widget</p>
 </div>
 </div>
@@ -77,9 +77,9 @@ footer {top: 920px;}
 <div id="sidebar">
 <h2>Connect with Me</h2>
 
-<a href="https://github.com/jessestoler"><img src="assets/images/github.png"></a>
-<a href="https://www.linkedin.com/in/jesse-stoler-540a6268/"><img src="assets/images/linkedin.png"></a>
-<a href="https://stackoverflow.com/users/9248905/j-sto?tab=profile"><img src="assets/images/stackOverflow.png"></a>    
+<a href="https://github.com/jessestoler"><img src="images/github.png"></a>
+<a href="https://www.linkedin.com/in/jesse-stoler-540a6268/"><img src="images/linkedin.png"></a>
+<a href="https://stackoverflow.com/users/9248905/j-sto?tab=profile"><img src="images/stackOverflow.png"></a>    
 </div>
 </div>
 
