--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,9 @@
  <!--Sidebar-->
 <div id="sidebar">
 <h2>Connect with Me</h2>
-<a href="https://github.com/jessestoler"><img src="assets/images/github.png"></a>
-<a href="https://www.linkedin.com/in/jesse-stoler-540a6268/"><img src="assets/images/linkedin.png"></a>
-<a href="https://stackoverflow.com/users/9248905/j-sto?tab=profile"><img src="assets/images/stackOverflow.png"></a>     
+<a href="https://github.com/jessestoler"><img src="images/github.png"></a>
+<a href="https://www.linkedin.com/in/jesse-stoler-540a6268/"><img src="images/linkedin.png"></a>
+<a href="https://stackoverflow.com/users/9248905/j-sto?tab=profile"><img src="images/stackOverflow.png"></a>     
 </div> 
 </div> 
 
