--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div id="main">
    <h2>About Me</h2> 
 <div id="mainLeft">     
- <img src="assets/images/profile.png">
+ <img src="images/profile.png">
  </div>
 
  <div id="mainRight"> 
@@ -58,9 +58,9 @@
 <!--Sidebar-->
 <div id="sidebar">
 <h2>Connect with Me</h2>
-<a href="https://github.com/jessestoler"><img src="assets/images/github.png"></a>
-<a href="https://www.linkedin.com/in/jesse-stoler-540a6268/"><img src="assets/images/linkedin.png"></a>
-<a href="https://stackoverflow.com/users/9248905/j-sto?tab=profile"><img src="assets/images/stackOverflow.png"></a>     
+<a href="https://github.com/jessestoler"><img src="images/github.png"></a>
+<a href="https://www.linkedin.com/in/jesse-stoler-540a6268/"><img src="images/linkedin.png"></a>
+<a href="https://stackoverflow.com/users/9248905/j-sto?tab=profile"><img src="images/stackOverflow.png"></a>     
 </div>
 </div>
 
