--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
      pity. I started teaching myself to code about six months ago, and fell in 
      love with it. It's both intellectually and creatively fulfilling.<br><br>I majored in journalism at
      Idaho State University. I still don't know why I was stupid enough to do that. Since then, most of my
-     professional career has been working as a content marketer at various SEO/digital
-     marketing agencies.<br><br>Beyond the professional, I love to write, hike, and from
-     time-to-time I will do stand-up (if I'm feeling drunk enough).<br><br></p>
+     professional career has been working as a content marketer at various SEO/digital marketing agencies.
+     <br><br>Beyond the professional, I love to write recreationally, hike, watch too 
+     much NBA basketball, and from time-to-time I will do stand-up (if I'm feeling <del>good</del> drunk enough).</p>
      </div>
 </div>
 
