--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <div id="links">
 <ul>
 <a href="index.html">About</a>
-<a href="portfolio.html">Portfolio</a>
-<a href="contact.html">Contact</a>    
+<a href="https://github.com/jessestoler">Portfolio</a>
+  
 </ul>    
 </div>
 </header>
@@ -50,8 +50,8 @@
      love with it. It's both intellectually and creatively fulfilling.<br><br>I majored in journalism at
      Idaho State University. I still don't know why I was stupid enough to do that. Since then, most of my
      professional career has been working as a content marketer at various SEO/digital marketing agencies.
-     <br><br>Beyond the professional, I love to write recreationally, hike, watch too 
-     much NBA basketball, and from time-to-time I will do stand-up (if I'm feeling <del>good</del> drunk enough).</p>
+     <br><br>Beyond the professional, I love to write recreationally, hike, and watch way too 
+     much basketball.</p>
      </div>
 </div>
 
