--- a/practice.html
+++ b/practice.html
@@ -7,19 +7,47 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="movies">
+    <div class="movies">
         <ul>
-            <li id="one">Baby Driver</li>
-            <li id="two">Blade Runner 2049</li>
-            <li id="three">Call Me by Your Name</li>
-            <li id="four">Dunkirk</li>
-            <li id="five">Get Out</li>
-            <li id="six">Mother!</li>
-            <li id="seven">Phantom Thread</li>
-            <li id="eight">The Killing of a Sacred Deer</li>
-            <li id="nine">The Shape of Water</li>
-            <li id="ten">Wonderstruck</li>
+            <li class="one">Amy</li>
+            <li class="two">Carol</li>
+            <li class="three">Inside Out</li>
+            <li class="four">Sicario</li>
+            <li class="five">Son of Saul</li>
+            <li class="six">Spotlight</li>
+            <li class="seven">Steve Jobs</li>
+            <li class="eight">The Big Short</li>
+            <li class="nine">The Lobster</li>
+            <li class="ten">The Revenant</li>
         </ul>
     </div>
+    <div class="movies">
+            <ul>
+                <li class="one">Arrival</li>
+                <li class="two">Hail, Caesar!</li>
+                <li class="three">Jackie</li>
+                <li class="four">La La Land</li>
+                <li class="five">Manchester by the Sea</li>
+                <li class="six">Mooonlight</li>
+                <li class="seven">Silence</li>
+                <li class="eight">The Salesman</li>
+                <li class="nine">13th</li>
+                <li class="ten">Toni Erdmann</li>
+            </ul>
+        </div>
+        <div class="movies">
+                <ul>
+                    <li class="one">Baby Driver</li>
+                    <li class="two">Blade Runner 2049</li>
+                    <li class="three">Call Me by Your Name</li>
+                    <li class="four">Dunkirk</li>
+                    <li class="five">Get Out</li>
+                    <li class="six">Mother!</li>
+                    <li class="seven">Phantom Thread</li>
+                    <li class="eight">The Killing of a Sacred Deer</li>
+                    <li class="nine">The Shape of Water</li>
+                    <li class="ten">Wonderstruck</li>
+                </ul>
+            </div>
 </body>
 </html>
