--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       Message<br>
       <input id="message" type="text">
       <br>
-      <input type="submit" value="Submit">    
+      <input id="submit" type="submit" value="Submit">    
       </form>  
       </div> 
       <div id="footer">
