--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <title>Jesse Stoler</title>
 </head>
 <body>
-        <div id="connect">
+    <h2>Commit Test</h2>
+       <!-- <div id="connect">
                 <p>Connect with Me</p>
                 <a href="https://github.com/jessestoler"><img src="images/github.png"></a>
                 <a href="https://www.linkedin.com/in/jesse-stoler-540a6268/"><img src="images/linkedin.png"></a>
@@ -121,7 +122,7 @@
         </div>
     </div>
      <p id="portfolioClose">X</p>
-</div>
+</div> -->
 
 
 </body>
