--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Jesse Stoler</title>
 </head>
 <body>
-    <h2>Commit Test</h2>
+    <h2>This is another test</h2>
        <!-- <div id="connect">
                 <p>Connect with Me</p>
                 <a href="https://github.com/jessestoler"><img src="images/github.png"></a>
